# stack-docker-image-build

./: .gitignore  ChangeLog.md  README.md  build-static.sh  stack-docker-image-build.cabal  stack.yaml
app/: Main.hs
example/: README.md  stack.yaml  test.sh
example/my-package/: my-package.cabal
example/my-package/src/: MyModule.hs
