name:                stack-docker-image-build
version:             0.1.0.0
synopsis:            Generate Docker images containing additional packages
homepage:            https://github.com/fpco/stack-docker-image-build#readme
license:             MIT
license-file:        LICENSE
author:              Michael Snoyman
maintainer:          michael@snoyman.com
category:            System
build-type:          Simple
extra-source-files:  README.md, ChangeLog.md, stack.yaml
cabal-version:       >=1.10

executable stack-docker-image-build
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base < 10
                     , typed-process
                     , filepath
                     , directory
                     , text
                     , yaml
                     , unordered-containers
                     , vector
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/fpco/stack-docker-image-build
